[Feat 3823] fix for broken css in advanced bugtracker dialog

--- a/tm/tm.web/src/main/webapp/styles/csswidgets.less
+++ b/tm/tm.web/src/main/webapp/styles/csswidgets.less
@@ -269,7 +269,7 @@ ul.squash-tagit {
 		border : 1px solid lightgray
 	}
 	
-	.span.issue-field-control-holder &{
+	.issue-field-control-holder &{
 		display : inline-block;
 		width : 98%;
 		border-color : lightgray;	
